[metadata]
name = Pacmann Cashier
version = attr: Pacmann Cashier.__version__
author = Yovi
author_email = roinaldoyovi@googlemail.com
url = https://github.com/yovir/cashier-pacmann
description = Python Cashier App
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cashier, python
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    pandas
    pyfiglet

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    cashier = app.main:main

[options.package_data]
example = data/schema.json, *.txt
* = README.md